AC_INIT(drohne, 0.2.0)
AM_INIT_AUTOMAKE

AC_PROG_INSTALL

dnl C# compiler
AC_PATH_PROG(MCS, mcs, no)
if test "x$MCS" = "xno"; then
    CS="C#"
    AC_MSG_ERROR([You need to install the Mono $CS compiler.])
fi

dnl glade-sharp
GLADESHARP_REQUIRED_VERSION=1.0
PKG_CHECK_MODULES(GLADESHARP, glade-sharp >= $GLADESHARP_REQUIRED_VERSION)

AC_SUBST(MCS)

AC_OUTPUT([
    Makefile
    src/Makefile
    src/AssemblyInfo.cs
])
